--- a/src/com/pos/account/view/login.fxml
+++ b/src/com/pos/account/view/login.fxml
@@ -13,20 +13,20 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="318.0" prefWidth="700.0" style="-fx-background-color: #133D3D;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.LoginController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="318.0" prefWidth="700.0" style="-fx-background-color: #133D3D;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pos.account.controller.LoginController">
    <children>
       <AnchorPane layoutY="1.0" prefHeight="310.0" prefWidth="700.0">
          <children>
             <ImageView fitHeight="318.0" fitWidth="351.0" layoutX="349.0" opacity="0.43" pickOnBounds="true">
                <image>
-                  <Image url="@images/suppermarket.jpg" />
+                  <Image url="@../../../../../Assets/images/suppermarket.jpg" />
                </image>
             </ImageView>
             <AnchorPane layoutX="351.0" opacity="0.84" prefHeight="318.0" prefWidth="351.0" style="-fx-background-color: #000;">
                <children>
                   <ImageView fitHeight="44.0" fitWidth="48.0" layoutX="294.0" layoutY="270.0" pickOnBounds="true">
                      <image>
-                        <Image url="@images/dic.png" />
+                        <Image url="@../../../../../Assets/images/dic.png" />
                      </image>
                   </ImageView>
                </children></AnchorPane>
@@ -81,12 +81,12 @@
                   </Label>
                   <ImageView fitHeight="19.0" fitWidth="22.0" layoutX="33.0" layoutY="122.0" opacity="0.49" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@images/54091415-icono-de-la-barra-de-la-trama-de-usuario-para-el-diseño-de-software-el-estilo-es-el-símbolo-gradiente-ico.jpg" />
+                        <Image url="@../../../../../Assets/images/54091415-icono-de-la-barra-de-la-trama-de-usuario-para-el-diseño-de-software-el-estilo-es-el-símbolo-gradiente-ico.jpg" />
                      </image>
                   </ImageView>
                   <ImageView fitHeight="19.0" fitWidth="22.0" layoutX="35.0" layoutY="183.0" opacity="0.59" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@images/pass.png" />
+                        <Image url="@../../../../../Assets/images/pass.png" />
                      </image>
                   </ImageView>
                </children>
