added some code to archive the createActP

--- a/src/com/pos/account/view/CreateActProfileView.fxml
+++ b/src/com/pos/account/view/CreateActProfileView.fxml
@@ -137,16 +137,16 @@
                <children>
                   <Pane fx:id="image_container1" layoutX="12.0" layoutY="6.0" prefHeight="178.0" prefWidth="166.0" style="-fx-background-color: #fff;  -fx-background-radius: 30; -fx-border-radius: 30;">
                      <children>
-                        <ImageView fx:id="profile_image1" fitHeight="153.0" fitWidth="134.0" layoutX="13.0" layoutY="14.0" opacity="0.7" pickOnBounds="true">
+                        <ImageView fx:id="profile_image1" fitHeight="153.0" fitWidth="134.0" layoutX="14.0" layoutY="25.0" opacity="0.7" pickOnBounds="true">
                            <image>
                               <Image url="@../../../../../Assets/images/user-login-icon-14.png" />
                            </image>
                         </ImageView>
                      </children>
                   </Pane>
-                  <Button alignment="CENTER" layoutX="465.0" layoutY="69.0" mnemonicParsing="false" opacity="0.94" prefHeight="62.0" prefWidth="159.0" style="-fx-background-color: #020529;" text="edit profile" textFill="#ac7b10">
+                  <Button fx:id="edit_profile_btn" alignment="CENTER" layoutX="435.0" layoutY="69.0" mnemonicParsing="false" onAction="#editProfile" opacity="0.94" prefHeight="71.0" prefWidth="189.0" style="-fx-background-color: #020529;" text="edit profile" textFill="#ac7b10">
                      <font>
-                        <Font name="Georgia Bold" size="16.0" />
+                        <Font name="Microsoft New Tai Lue Bold" size="18.0" />
                      </font>
                   </Button>
                </children>
